연산자 끼워넣기

--- a/삼성 SW 역량 테스트 기출 문제/삼성 SW 역량 테스트 기출 문제.vcxproj
+++ b/삼성 SW 역량 테스트 기출 문제/삼성 SW 역량 테스트 기출 문제.vcxproj
@@ -139,7 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="연구소.cpp" />
+    <ClCompile Include="연구소.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="연산자 끼워넣기.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
