--- a/삼성 SW 역량 테스트 기출 문제/삼성 SW 역량 테스트 기출 문제.vcxproj.filters
+++ b/삼성 SW 역량 테스트 기출 문제/삼성 SW 역량 테스트 기출 문제.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="연구소.cpp">
       <Filter>소스 파일\백준</Filter>
     </ClCompile>
+    <ClCompile Include="연산자 끼워넣기.cpp">
+      <Filter>소스 파일\백준</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
